--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="wifi">wifi</string>
     <string name="leancloud">leancloud</string>
     <string name="mvc_test">MVC Test</string>
+    <string name="ipc_test">IPC Test</string>
+
 </resources>
