--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="bitmap_load">图片加载</string>
     <string name="rxjava">RxJava</string>
     <string name="retrofix">retrofix</string>
+    <string name="baidumap">百度地图</string>
     <string name="title_activity_scrolling">ScrollingActivity</string>
 
 
