--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="retrofix">retrofix</string>
     <string name="baidumap">百度地图</string>
     <string name="title_activity_scrolling">ScrollingActivity</string>
+    <string name="tcp_test">Tcp Test</string>
 
 
 
